--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rhytham</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Lobster+Two&family=Pacifico&family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -35,6 +35,11 @@
             <div class="lobster2">Code for A Simple Web Chat</div>
             <div class="lobster2 text-xs">(You Can't Chat with others, just with yourself,and your data won't be saved.)</div>
             <a href="..\D:\Rhytham\webdev\Alpine\chat.html" class="" download>
+                <button class="mt-4 text-white pacifico text-center bg-gray-300 p-1 text-gray-700">Download</button>
+            </a>
+            <div class="lobster2">Code for A Simple Web Chat</div>
+            <div class="lobster2 text-xs">(You Can't Chat with others, just with yourself,and your data won't be saved.)</div>
+            <a href="..D:/code/blog-details.html" class="" download>
                 <button class="mt-4 text-white pacifico text-center bg-gray-300 p-1 text-gray-700">Download</button>
             </a>
         </div>
