--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rhytham</title>
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Lobster+Two&family=Pacifico&family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -24,43 +24,43 @@
         }
     </style>
 </head>
-<body style="background-color: rgb(1, 27, 27);" class="p-2 text-white">
+<body style="background-color: rgb(1, 27, 27);" class="p-2 lg:p-8 text-white">
     <div class="">
         <div class="mt-4 ">
             <!-- Intro  -->
-            <div class="text-center text-2xl lobster ">Hello Everyone</div>
-            <div class="text-center lobster text-2xl mt-2">You can download Abhilash Sir's code from this site</div>
+            <div class="text-center lg:text-4xl text-2xl lobster sm:text-3xl ">Hello Everyone</div>
+            <div class="text-center lobster lg:text-4xl text-2xl sm:text-3xl mt-2">You can download Abhilash Sir's code from this site</div>
         </div>
         <div class="text-center mt-8 text-sm space-y-2">
-            <div class="lobster2">Blog-Details</div>
-            <div class="lobster2 text-xs">(You Can't Chat with others, just with yourself,and your data won't be saved.)</div>
+            <div class="lobster2 lg:text-3xl sm:text-2xl">Blog-Details</div>
+            <div class="lobster2 text-xs lg:text-3xl sm:text-2xl">(You Can't Chat with others, just with yourself,and your data won't be saved.)</div>
             <a href="../All Code/blog-details.html" class="" download>
-                <button class="mt-4 text-white pacifico text-center bg-gray-300 p-1 text-gray-700">Download</button>
+                <button class="mt-4 lg:text-xl lg:rounded-xl mt-4 sm:rounded-lg sm:p-2  lg:p-2 sm:text-lg text-white pacifico text-center bg-gray-300 p-1 text-gray-700">Download</button>
             </a>
-            <div class="lobster2">Unacademy Recreation</div>
+            <div class="lobster2 lg:text-3xl sm:text-2xl">Unacademy Recreation</div>
             <a href="../All Code/Unacademy(1).html" class="" download>
-                <button class="mt-2 text-white pacifico text-center bg-gray-300 p-1 text-gray-700">Download</button>
+                <button class="mt-2 lg:text-xl lg:rounded-xl mt-4 sm:rounded-lg sm:p-2  lg:p-2 sm:text-lg text-white pacifico text-center bg-gray-300 p-1 text-gray-700">Download</button>
             </a>
-            <div class="lobster2">Alpine.JS Part-1</div>
+            <div class="lobster2 lg:text-3xl sm:text-2xl">Alpine.JS Part-1</div>
             <a href="../All Code/alpinejs.html" class="" download>
-                <button class="mt-2 text-white pacifico text-center bg-gray-300 p-1 text-gray-700">Download</button>
+                <button class="mt-2 lg:text-xl lg:rounded-xl mt-4 sm:rounded-lg sm:p-2  lg:p-2 sm:text-lg text-white pacifico text-center bg-gray-300 p-1 text-gray-700">Download</button>
             </a>
-            <div class="lobster2">Alpine.JS Part-2</div>
+            <div class="lobster2 lg:text-3xl sm:text-2xl">Alpine.JS Part-2</div>
             <a href="../All Code/alpinejs2.html" class="" download>
-                <button class="mt-2 text-white pacifico text-center bg-gray-300 p-1 text-gray-700">Download</button>
+                <button class="mt-2 lg:text-xl lg:rounded-xl mt-4 sm:rounded-lg sm:p-2  lg:p-2 sm:text-lg text-white pacifico text-center bg-gray-300 p-1 text-gray-700">Download</button>
             </a>
-            <div class="lobster2">Alpine.JS Part-3</div>
+            <div class="lobster2 lg:text-3xl sm:text-2xl">Alpine.JS Part-3</div>
             <a href="../All Code/alpine.html" class="" download>
-                <button class="mt-2 text-white pacifico text-center bg-gray-300 p-1 text-gray-700">Download</button>
+                <button class="mt-2 lg:text-xl lg:rounded-xl mt-4 sm:rounded-lg sm:p-2  lg:p-2 sm:text-lg text-white pacifico text-center bg-gray-300 p-1 text-gray-700">Download</button>
             </a>
-            <div class="lobster2 ">Code for A Simple Web Chat or Alpine Part-4</div>
-            <div class="lobster2 text-xs">(You Can't Chat with others, just with yourself,and your data won't be saved.)</div>
+            <div class="lobster2 lg:text-3xl  sm:text-2xl">Code for A Simple Web Chat or Alpine Part-4</div>
+            <div class="lobster2 text-xs lg:text-3xl sm:text-2xl">(You Can't Chat with others, just with yourself,and your data won't be saved.)</div>
             <a href="../All Code/chat.html" class="" download>
-                <button class="mt-4 text-white pacifico text-center bg-gray-300 p-1 text-gray-700">Download</button>
+                <button class="mt-4 lg:text-xl lg:rounded-xl mt-4 sm:rounded-lg sm:p-2  lg:p-2 sm:text-lg text-white pacifico text-center bg-gray-300 p-1 text-gray-700">Download</button>
             </a>
-            <div class="lobster2 ">Javascript</div>
+            <div class="lobster2 lg:text-3xl  sm:text-2xl">Javascript</div>
             <a href="../All Code/js.html" class="" download>
-                <button class="mt-2 text-white pacifico text-center bg-gray-300 p-1 text-gray-700">Download</button>
+                <button class="mt-2 lg:text-xl lg:rounded-xl mt-4 sm:rounded-lg sm:p-2   lg:p-2 sm:text-lg text-white pacifico text-center bg-gray-300 p-1 text-gray-700">Download</button>
             </a>
 
         </div>
